--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -1,124 +1,110 @@
 html,body{
   width: 100%;
   height: 100%;
+  margin:0;
+  padding:0;
 }
-#app{
-  height: 100%;
-}
-.jeecg-login {
+.xxWeb{
   width: 100%;
   height: 100%;
-  background: #2D3A4B url('../imgs/background.svg') no-repeat center center;
-  background-size: contain;
-  &.mobile {
-    .container {
-      .main {
-        max-width: 368px;
-        width: 98%;
-      }
-    }
-  }
-
-  .container {
+  margin:0;
+  padding:0;
+  .jeecg-login {
     width: 100%;
-    background-size: 100%;
-    padding: 110px 0 144px;
-    position: relative;
-
-    a {
-      text-decoration: none;
-    }
-
-    .top {
-      text-align: center;
-
-      .header {
-        height: 44px;
-        line-height: 44px;
-
-        .badge {
-          position: absolute;
-          display: inline-block;
-          line-height: 1;
-          vertical-align: middle;
-          margin-left: -12px;
-          margin-top: -10px;
-          opacity: 0.8;
+    height: 100%;
+    background: #2D3A4B url('../imgs/background.svg') no-repeat center center;
+    background-size: contain;
+    &.mobile {
+      .container {
+        .main {
+          max-width: 368px;
+          width: 98%;
         }
-
-        .logo {
-          height: 44px;
-          vertical-align: top;
-          margin-right: 16px;
-          border-style: none;
-        }
-
-        .title {
-          font-size: 33px;
-          color: rgba(255, 255, 255, 0.85);
-          font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-          font-weight: 600;
-          position: relative;
-          top: 2px;
-        }
-      }
-      .desc {
-        font-size: 14px;
-        color: rgba(255, 255, 255, 0.85);
-        margin-top: 12px;
-        margin-bottom: 40px;
       }
     }
 
-    .main {
-      min-width: 260px;
-      width: 368px;
-      margin: 0 auto;
-      margin-top: 60px;
-      color:#fff;
-      text-align:left;
-      .login-btn{
-        width: 100%;
-        font-size: 16px
+    .container {
+      width: 500px;
+      position: absolute;
+      top: 20%;
+      height: auto;
+      left: 50%;
+      transform: translate(-50%,-20%);
+      a {
+        text-decoration: none;
       }
-      .login-title{
-        font-size: 14px;
-        height: 45px;
-        width: 88px;
+      .top {
         text-align: center;
-        line-height: 45px;
-        color: #fff;
+        .header {
+          display: inline-flex;
+          justify-content: center;
+          align-items: center;
+          .logo {
+            height: 44px;
+          }
+          .title {
+            font-size: 33px;
+            color: rgba(255, 255, 255, 0.85);
+            font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-weight: 600;
+          }
+        }
+        .desc {
+          font-size: 14px;
+          color: rgba(255, 255, 255, 0.85);
+          margin-top: 12px;
+          margin-bottom: 40px;
+        }
+      }
+
+      .main {
+        min-width: 260px;
+        width: 368px;
         margin: 0 auto;
-        border-bottom: 2px solid #1890ff;
-        box-sizing: border-box;
-        margin-bottom: 16px
-      }
-      .el-input__inner {
-        background-color: #283443;
-        border-color: #696969;
-        color: #fff;
-        &:focus {
-          border-color: #409EFF;
+        margin-top: 60px;
+        color:#fff;
+        text-align:left;
+        .login-btn{
+          width: 100%;
+          font-size: 16px
         }
-        &::placeholder{
-          color:#606266
+        .login-title{
+          font-size: 14px;
+          height: 45px;
+          width: 88px;
+          text-align: center;
+          line-height: 45px;
+          color: #fff;
+          margin: 0 auto;
+          border-bottom: 2px solid #1890ff;
+          box-sizing: border-box;
+          margin-bottom: 16px
         }
-        &:-webkit-autofill {
-          -webkit-box-shadow: 0 0 0px 32px #283443 inset;
-          -webkit-text-fill-color: #fff;
+        .el-input__inner {
+          background-color: #283443;
+          border-color: #696969;
+          color: #fff;
+          &:focus {
+            border-color: #409EFF;
+          }
+          &::placeholder{
+            color:#606266
+          }
+          &:-webkit-autofill {
+            -webkit-box-shadow: 0 0 0px 32px #283443 inset;
+            -webkit-text-fill-color: #fff;
+          }
         }
-      }
-      .is-error .el-input__inner{
-        border-color: #F56C6C;
+        .is-error .el-input__inner{
+          border-color: #F56C6C;
+        }
       }
     }
-
     .footer {
       bottom: 0;
-      padding: 0 16px;
-      margin: 48px 0 24px;
+      width: 100%;
       text-align: center;
-
+      position: absolute;
       .links {
         margin-bottom: 8px;
         font-size: 14px;
@@ -133,8 +119,10 @@ html,body{
       .copyright {
         color: rgba(255, 255, 255, 0.85);
         font-size: 14px;
+        margin-bottom: 8px;
         a{
           color: #1890ff;
+          text-decoration: none;
           &:hover{
             color: #40A9FF;
           }
