--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -4,6 +4,12 @@ html,body{
   margin:0;
   padding:0;
 }
+#app{
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
+}
 .xxWeb{
   width: 100%;
   height: 100%;
