--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -8,6 +8,12 @@ html,body{
   margin:0;
   padding:0;
 }
+#app{
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
+}
 .xxWeb{
   width: 100%;
   height: 100%;
