--- a/src/packages/xxWeb-box/assets/css/404.less
+++ b/src/packages/xxWeb-box/assets/css/404.less
@@ -4,10 +4,49 @@ html,body{
   margin:0;
   padding:0;
 }
-.xxWeb-box{
-  height:100%;
+.xxWeb{
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
   .not-found{
-    background-color:#999;
-    height:100%;
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding:0;
+    background: linear-gradient(#229EF8,50%, #A8C4F3);
+    font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    text-align: center;
+    .code{
+      display: inline-block;
+      font-size: 160px;
+      font-weight: bold;
+      color: #fff;
+      margin-top: 30px;
+    }
+    .info{
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      margin-top: 30px;
+    }
+    .goHome{
+      position: absolute;
+      bottom: 0;
+      height: 300px;
+      width: 100%;
+      display: flex;
+      justify-content: left;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      .cloud{
+        display: inline-block;
+        width: calc( 100%/8 );
+        height: 300px;
+        border-radius: 100px;
+        background-color: #fff;
+      }
+    }
   }
 }
