--- a/src/packages/xxWeb-box/assets/css/404.less
+++ b/src/packages/xxWeb-box/assets/css/404.less
@@ -22,7 +22,7 @@ html,body{
       font-size: 160px;
       font-weight: bold;
       color: #fff;
-      margin-top: 30px;
+      margin-top: 80px;
     }
     .info{
       color: #fff;
@@ -30,23 +30,16 @@ html,body{
       font-weight: bold;
       margin-top: 30px;
     }
-    .goHome{
+    .cloud{
       position: absolute;
       bottom: 0;
-      height: 300px;
+      height: 200px;
       width: 100%;
-      display: flex;
-      justify-content: left;
       margin: 0;
       padding: 0;
       overflow: hidden;
-      .cloud{
-        display: inline-block;
-        width: calc( 100%/8 );
-        height: 300px;
-        border-radius: 100px;
-        background-color: #fff;
-      }
+      background: url("../../assets/imgs/cloud.png") repeat-x left bottom;
+      background-size: contain;
     }
   }
 }
