--- a/src/packages/xxWeb-box/assets/css/404dark.less
+++ b/src/packages/xxWeb-box/assets/css/404dark.less
@@ -22,7 +22,7 @@ html,body{
     justify-content: center;
     align-items: center;
     .not-found-left {
-      width: 460px;
+      width: 500px;
 
       .code-dark{
         display: inline-block;
@@ -34,7 +34,28 @@ html,body{
         font-size: 40px;
       }
       .info-dark{
-        margin-top: 10px;
+        margin: 10px 0 20px 0;
+      }
+      span{
+        display: inline-block;
+        width: 120px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        border: 2px solid #fff;
+        margin-right: 20px;
+        font-weight: bold;
+        margin-bottom: 30px;
+        cursor: pointer;
+      }
+      .help-button {
+        background-color: #fff;
+        color: #344A5F;
+        margin-right: 20px;
+      }
+      .home-button{
+        border: 2px solid #fff;
+        color: #fff;
       }
     }
   }
