--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -81,7 +81,7 @@ html,body{
           color: #FECE5C;
         }
         text-align: left;
-        padding: 20px;
+        padding: 10px 20px 20px 20px;
         height: 56px;
         margin-bottom: 13px;
         border-bottom: 1px solid #58626A;
