--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -193,13 +193,18 @@ html,body{
       align-items: center;
       height: 52px;
       line-height: 52px;
+      padding: 0 15px;
     }
     .logo img{
       height: 24px;
     }
     .title{
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
       font-size: 18px;
-      margin: 0 15px;
+      margin: 0;
+      margin-left: 15px;
     }
     .title-enter,.title-leave-to{
       opacity: 0;
