--- a/src/packages/xxWeb-box/assets/css/404/404.less
+++ b/src/packages/xxWeb-box/assets/css/404/404.less
@@ -38,7 +38,7 @@ html,body{
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: url("../../assets/imgs/cloud.png") repeat-x left bottom;
+      background: url("../../imgs/cloud.png") repeat-x left bottom;
       background-size: contain;
     }
   }
