--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,7 +1,7 @@
-@import "theme-default";
-@import "theme-vue-admin";
-@import "theme-v2board";
-@import "theme-thunder";
+@import "theme/theme-default";
+@import "theme/theme-vue-admin";
+@import "theme/theme-v2board";
+@import "theme/theme-thunder";
 html,body{
   width: 100%;
   height: 100%;
