--- a/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
@@ -18,7 +18,7 @@ html,body{
   .jeecg-login {
     width: 100%;
     height: 100%;
-    background: #2D3A4B url('../imgs/background.svg') no-repeat center center;
+    background: #2D3A4B url('../../imgs/background.svg') no-repeat center center;
     background-size: contain;
     &.mobile {
       .container {
