--- a/src/packages/xxWeb-box/assets/css/login/pig-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/pig-login.less
@@ -21,11 +21,11 @@ html,body{
     margin: 0;
     padding: 0;
     background-color: #184da5;
-    background-image: url(../imgs/bg.png);
+    background-image: url(../../imgs/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     .login-div {
-      background-image: url(../imgs/banner.png);
+      background-image: url(../../imgs/banner.png);
       width: 1200px;
       height: 798px;
       position: absolute;
