--- a/src/packages/xxWeb-box/assets/css/login/watermelon-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/watermelon-login.less
@@ -25,7 +25,7 @@ html,body{
     .login-main {
       width: 720px;
       height: 550px;
-      background-image: url(../../assets/imgs/longin2/bg1.png);
+      background-image: url(../../imgs/longin2/bg1.png);
       background-size: 100% 100%;
       border-radius: 5px;
       display: flex;
@@ -40,7 +40,7 @@ html,body{
           height: 200px;
           top: 170px;
           left: 60px;
-          background: url(../../assets/imgs/longin2/bg2.png) no-repeat;
+          background: url(../../imgs/longin2/bg2.png) no-repeat;
           background-size: 100%;
         }
       }
