--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -148,14 +148,14 @@ html,body{
       border-right:none;
       background:none;
     }
-    .el-menu--horizontal>.s2-item-link{
+    .el-menu--horizontal>.box-item-link{
       float: left;
     }
     .el-menu.el-menu--horizontal{
       border-bottom: none;
     }
     .el-menu--horizontal>.el-submenu .el-submenu__title,
-    .el-menu--horizontal>.s2-item-link>.el-menu-item{
+    .el-menu--horizontal>.box-item-link>.el-menu-item{
       height:52px;
       line-height: 52px;
     }
