--- a/src/packages/xxWeb-box/assets/css/theme/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-default.less
@@ -117,7 +117,7 @@
   .el-menu--popup{
     background-color: @--main-bg-color;
   }
-  .s2-item-link{
+  .box-item-link{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
