--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -129,7 +129,7 @@
     background-color: @--main-bg-color;
     padding: 0;
   }
-  .s2-item-link{
+  .box-item-link{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
