--- a/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
@@ -135,7 +135,7 @@
   .el-menu{
     padding: 0 14px;
   }
-  .s2-item-link{
+  .box-item-link{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
