--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -317,6 +317,12 @@ html,body{
         display: none;
       }
     }
+    .el-icon-dog-icon {
+      width: 24px;
+      margin-right: 5px;
+      font-size: 18px;
+      vertical-align: middle
+    }
   }
 }
 .box-item-link{
