--- a/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
@@ -47,6 +47,7 @@ html,body{
           align-items: center;
           .logo {
             height: 44px;
+            margin-right:16px;
           }
           .title {
             font-size: 33px;
