--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -80,6 +80,7 @@ html,body{
         .el-dropdown{
           color: #FECE5C;
         }
+        box-sizing: content-box;
         text-align: left;
         padding: 10px 20px 20px 20px;
         height: 56px;
@@ -91,6 +92,10 @@ html,body{
         justify-content: center;
         align-items: center;
         height: 100%;
+      }
+      .user-wrapper-avatar{
+        height: 50px;
+        line-height: 50px;
       }
       .user-wrapper-username{
         margin-left: 12px;
