--- a/src/packages/xxWeb-box/assets/css/404/404dark.less
+++ b/src/packages/xxWeb-box/assets/css/404/404dark.less
@@ -36,7 +36,7 @@ html,body{
       .info-dark{
         margin: 10px 0 20px 0;
       }
-      span{
+      .help-button,.home-button{
         display: inline-block;
         width: 120px;
         height: 40px;
@@ -49,11 +49,13 @@ html,body{
         cursor: pointer;
       }
       .help-button {
+        text-decoration: none;
         background-color: #fff;
         color: #344A5F;
         margin-right: 20px;
       }
       .home-button{
+        text-decoration: none;
         border: 2px solid #fff;
         color: #fff;
       }
