--- a/src/packages/xxWeb-box/assets/css/404/404.less
+++ b/src/packages/xxWeb-box/assets/css/404/404.less
@@ -22,13 +22,13 @@ html,body{
       font-size: 160px;
       font-weight: bold;
       color: #fff;
-      margin-top: 80px;
+      margin-top: 100px;
     }
     .info{
       color: #fff;
       font-size: 40px;
       font-weight: bold;
-      margin-top: 30px;
+      margin-top: 120px;
     }
     .cloud{
       position: absolute;
@@ -40,6 +40,30 @@ html,body{
       overflow: hidden;
       background: url("../../imgs/cloud.png") repeat-x left bottom;
       background-size: contain;
+    }
+    .home-button{
+      position: absolute;
+      bottom: 200px;
+      width: 120px;
+      height: 40px;
+      left: 50%;
+      right: 50%;
+      line-height: 40px;
+      text-align: center;
+      margin-left: -60px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: underline;
+      color: #fff;
+    }
+    .mark{
+      width: 105px;
+      height: 131px;
+      margin: 0 auto;
+      position: relative;
+      left: -300px;
+      top: -300px;
+      background: url("../../imgs/mark1.png");
     }
   }
 }
