--- a/src/packages/xxWeb-box/assets/css/login/phylum-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/phylum-login.less
@@ -19,13 +19,13 @@ html,body{
   .phylum-login{
     width: 100%;
     height: 100%;
-    //background-image: url("../../imgs/bg2.png");
+    background-image: url("../../imgs/bg6.png");
     background-position: top;
     background-repeat: no-repeat;
     //background-color: #222a39;
-    background:linear-gradient(90deg,rgba(220,137,255,1) 0%,rgba(162,152,255,1) 52%,rgba(83,160,253,1) 100%);
+    //background:linear-gradient(90deg,rgba(220,137,255,1) 0%,rgba(162,152,255,1) 52%,rgba(83,160,253,1) 100%);
     //opacity:0.2969;
-    background-size: contain;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,7 +139,7 @@ html,body{
         }
       }
       .copyright {
-        color: rgba(255, 255, 255, 0.85);
+        color: #333;
         font-size: 14px;
         margin-bottom: 8px;
         a{
