--- a/src/packages/xxWeb-box/assets/css/login/phylum-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/phylum-login.less
@@ -19,7 +19,7 @@ html,body{
   .phylum-login{
     width: 100%;
     height: 100%;
-    background-image: url("../../imgs/bg6.png");
+    background-image: url("../../imgs/bg7.png");
     background-position: top;
     background-repeat: no-repeat;
     //background-color: #222a39;
@@ -131,7 +131,7 @@ html,body{
         margin-bottom: 8px;
         font-size: 14px;
         a {
-          //color: rgba(255, 255, 255, 0.85);
+          color: rgba(255, 255, 255, 0.85);
           transition: all 0.3s;
           &:not(:last-child) {
             margin-right: 40px;
@@ -139,11 +139,11 @@ html,body{
         }
       }
       .copyright {
-        color: #333;
+        color: rgba(255, 255, 255, 0.85);
         font-size: 14px;
         margin-bottom: 8px;
         a{
-          color: #1890ff;
+          color: rgba(255, 255, 255, 0.85);
           text-decoration: none;
           &:hover{
             color: #40A9FF;
