--- a/src/packages/xxWeb-box/assets/css/login/phylum-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/phylum-login.less
@@ -39,8 +39,7 @@ html,body{
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 -3em 3em rgba(0,0,0,0.1),
-              0.3em 0.3em 1em rgba(0,0,0,0.3);
+      box-shadow: 0px 0px 6em rgba(0,0,0,0), 0em 0em 2em rgba(12,71,113,0.13)
     }
     .pic{
       height: 100%;
