--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -164,8 +164,8 @@ html,body{
       height:52px;
       line-height: 52px;
     }
-    .user-menu-item+.user-menu-item{
-      margin-left: 15px;
+    .topmenu+.topmenu{
+     margin-left: 15px;
     }
     .el-icon-user{
       font-size: 16px
