--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -76,6 +76,18 @@ html,body{
       text-align: right;
     }
     .side-menu{
+      .side-menu-header{
+        height: 52px;
+        line-height: 52px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 15px;
+        transition: all;
+      }
+      .side-menu-header-center{
+        justify-content: center;
+      }
       .user-wrapper{
         .el-dropdown{
           color: #FECE5C;
@@ -198,7 +210,6 @@ html,body{
       align-items: center;
       height: 52px;
       line-height: 52px;
-      padding: 0 15px;
     }
     .logo img{
       height: 24px;
