--- a/src/packages/xxWeb-box/assets/css/theme/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-default.less
@@ -86,6 +86,9 @@
   .layout-main{
     background: @--text-color;
   }
+  .tab-padding{
+    padding-top: 40px !important;
+  }
   .contextmenu {
     background: @--text-color;
     color: @--sideMenu-header-color;
