--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -94,6 +94,9 @@
   .layout-main{
     background: @--text-color;
   }
+  .tab-padding{
+    padding-top: 52px !important;
+  }
   .contextmenu {
     background: @--text-color;
     color: @--sideMenu-header-color;
