--- a/src/packages/xxWeb-box/assets/css/404/404-2.less
+++ b/src/packages/xxWeb-box/assets/css/404/404-2.less
@@ -9,61 +9,36 @@ html,body{
   height: 100%;
   margin:0;
   padding:0;
-  .not-found{
-    width: 100%;
-    height: 100%;
-    margin:0;
-    padding:0;
-    background: linear-gradient(#229EF8,50%, #A8C4F3);
-    font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    text-align: center;
-    .code{
+  justify-content: center;
+  .not-found-2{
+    display: inline-flex;
+    align-items: unset;
+    margin: 0 auto;
+    margin-top: 150px;
+    .img,.content{
       display: inline-block;
-      font-size: 160px;
-      font-weight: bold;
-      color: #fff;
-      margin-top: 100px;
     }
-    .info{
-      color: #fff;
-      font-size: 40px;
-      font-weight: bold;
-      margin-top: 120px;
+
+    .img{
+      background: url("../../imgs/404-2.svg") no-repeat center center;
+      width: 430px;
+      height: 360px;
+      padding-right: 52px;
     }
-    .cloud{
-      position: absolute;
-      bottom: 0;
-      height: 200px;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background: url("../../imgs/cloud.png") repeat-x left bottom;
-      background-size: contain;
-    }
-    .home-button{
-      position: absolute;
-      bottom: 200px;
-      width: 120px;
-      height: 40px;
-      left: 50%;
-      right: 50%;
-      line-height: 40px;
-      text-align: center;
-      margin-left: -60px;
-      font-weight: bold;
-      cursor: pointer;
-      text-decoration: underline;
-      color: #fff;
-    }
-    .mark{
-      width: 105px;
-      height: 131px;
-      margin: 0 auto;
-      position: relative;
-      left: -300px;
-      top: -300px;
-      background: url("../../imgs/mark1.png");
+    .content{
+      h1{
+        color: #434e59;
+        font-size: 72px;
+        font-weight: 600;
+        line-height: 72px;
+        margin-bottom: 24px;
+      }
+      .desc{
+        color: rgba(0,0,0,.45);
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 16px;
+      }
     }
   }
 }
