--- a/src/packages/xxWeb-box/assets/css/403/403-2.less
+++ b/src/packages/xxWeb-box/assets/css/403/403-2.less
@@ -15,6 +15,11 @@ html,body{
     align-items: center;
     margin: 0 auto;
     margin-top: 150px;
-
+    .img{
+      background: url("../../imgs/403-2.png") no-repeat center center;
+      width: 700px;
+      height: 300px;
+      background-size: contain
+    }
   }
 }
