--- a/src/packages/xxWeb-box/assets/css/403/403-1.less
+++ b/src/packages/xxWeb-box/assets/css/403/403-1.less
@@ -11,10 +11,12 @@ html,body{
   padding:0;
   justify-content: center;
   .no-authority-1{
-    display: inline-flex;
-    align-items: unset;
-    margin: 0 auto;
-    margin-top: 150px;
+    margin: 0px auto;
+    display: flex;
+    width: 600px;
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
     .img,.content{
       display: inline-block;
     }
@@ -26,6 +28,7 @@ html,body{
       padding-right: 52px;
     }
     .content{
+      text-align: center;
       h1{
         color: #434e59;
         font-size: 72px;
