--- a/src/packages/xxWeb-box/assets/css/403/403-2.less
+++ b/src/packages/xxWeb-box/assets/css/403/403-2.less
@@ -11,15 +11,43 @@ html,body{
   padding:0;
   justify-content: center;
   .no-authority-2{
-    display: inline-flex;
+    flex-flow: column;
     align-items: center;
     margin: 0 auto;
-    margin-top: 150px;
+    position: relative;
+    width: 650px;
+    top: 50%;
+    transform: translateY(-50%);
     .img{
       background: url("../../imgs/403-2.png") no-repeat center center;
       width: 700px;
       height: 300px;
-      background-size: contain
+      background-size: contain;
+      display: block;
+    }
+    .content{
+      text-align: center;
+      .h1{
+        color: #434e59;
+        font-size: 48px;
+        font-weight: 600;
+        line-height: 48px;
+        margin-bottom: 24px;
+      }
+      .desc{
+        color: rgba(0,0,0,.45);
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 24px;
+      }
+      .action{
+        .btn{
+          width: 150px;
+          height: 46px;
+          border-radius: 46px;
+          box-shadow: 0px 3px 9px #46a1f88c;
+        }
+      }
     }
   }
 }
