--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -27,6 +27,7 @@ html,body{
       overflow: hidden;
       display: inline-flex;
       flex-direction: column;
+      width: 100%;
     }
     .header{
       z-index: 2;
@@ -293,7 +294,7 @@ html,body{
     .app-main{
       flex: 1;
       padding: 12px;
-      overflow-y: auto;
+      overflow: auto;
     }
 
     .app-main::-webkit-scrollbar{
