--- a/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
@@ -20,6 +20,7 @@ html,body{
     height: 100%;
     background: #2D3A4B url('../../imgs/background.svg') no-repeat center center;
     background-size: contain;
+    position: relative;
     &.mobile {
       .container {
         .main {
@@ -41,7 +42,7 @@ html,body{
       }
       .top {
         text-align: center;
-        .header {
+        .login-header {
           display: inline-flex;
           justify-content: center;
           align-items: center;
