--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -326,7 +326,7 @@ html,body{
         cursor: text;
       }
     }
-    .footer{
+    .content-container>.footer{
       height: 24px !important;
       text-align: left;
       line-height: 24px;
