--- a/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
@@ -113,6 +113,8 @@ html,body{
       width: 100%;
       text-align: center;
       position: absolute;
+      background: transparent;
+      border-top:none;
       .links {
         margin-bottom: 8px;
         font-size: 14px;
