--- a/src/packages/xxWeb-box/assets/css/login/phylum-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/phylum-login.less
@@ -29,6 +29,7 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     .container{
       width: 800px;
       border-radius: 5px;
@@ -58,7 +59,7 @@ html,body{
         text-align: left;
         height: 90px;
         line-height: 75px;
-        //color: #fff;
+        color: #2c3e50;
         display: flex;
         justify-content: left;
         align-items: center;
@@ -126,6 +127,7 @@ html,body{
       width: 100%;
       text-align: center;
       position: absolute;
+      background: transparent;
       .links {
         margin-bottom: 8px;
         font-size: 14px;
