新增nitro、default-light主題

--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,7 +1,9 @@
 @import "theme/theme-default";
+@import "theme/theme-default-light";
 @import "theme/theme-vue-admin";
 @import "theme/theme-v2board";
 @import "theme/theme-thunder";
+@import "theme/theme-nitro";
 html,body{
   width: 100%;
   height: 100%;
