--- a/src/packages/xxWeb-box/assets/css/login/pig-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/pig-login.less
@@ -24,6 +24,7 @@ html,body{
     background-image: url(../../imgs/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
     .login-div {
       background-image: url(../../imgs/banner.png);
       width: 1200px;
