--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -4,7 +4,7 @@
   @--active-color:#409EFF;
   @--sideMenu-header-color: #409EFF;
   @--sideMenu-header-bg-color:#F6F8FA;
-  @--menu-item-text-color:#bfcbd9;
+  @--menu-item-text-color: #555d65;
   @--menu-item-active-text-color:#409EFF;
   @--menu-item-active-bg-color:#EFF7FE;
   @--menu-text-hover-color:#409EFF;
