增加主题代码复制页面

--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -22,8 +22,9 @@ html,body{
   margin:0;
   padding:0;
   .xxWeb-box{
+    height: 100%;
     .main-container{
-      height: 100vh;
+      height: 100%;
     }
     .content-container{
       overflow: hidden;
