增加主题代码复制页面

--- a/src/packages/xxWeb-box/assets/css/theme/theme-default-light.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-default-light.less
@@ -62,10 +62,10 @@
     background: @--main-bg-color;
   }
   .dynamic-menu{
-    //.el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
-    //  color: @--menu-item-text-color;
-    //  background-color: @--main-bg-color;
-    //}
+    .el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
+      color: @--menu-item-text-color;
+      background-color: @--main-bg-color;
+    }
     .el-submenu__title{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
@@ -98,7 +98,7 @@
     color: @--text-color;
   }
   .layout-main{
-    background: @--text-color;
+    background: @--main-bg-color;
   }
   .tab-padding{
     padding-top: 40px !important;
