--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -60,16 +60,28 @@
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
     }
-    .el-menu-item{
-      min-width: unset;
-      line-height: 40px;
-      height: 40px;
-      background-color: @--submenu-item-bg-color;
-      &:hover{
-        color: @--menu-text-hover-color;
-        background-color: @--menu-item-hover-bg-color;
+    .el-submenu {
+      .el-menu-item{
+        min-width: unset;
+        line-height: 40px;
+        height: 40px;
+        background-color: @--submenu-item-bg-color;
+        &:hover{
+          color: @--menu-text-hover-color;
+          background-color: @--menu-item-hover-bg-color;
+        }
       }
     }
+    //.el-menu-item{
+    //  min-width: unset;
+    //  line-height: 40px;
+    //  height: 40px;
+    //  background-color: @--submenu-item-bg-color;
+    //  &:hover{
+    //    color: @--menu-text-hover-color;
+    //    background-color: @--menu-item-hover-bg-color;
+    //  }
+    //}
     .el-submenu__title{
       height: 40px;
       line-height: 40px;
