--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,4 +1,4 @@
-@import "theme/theme-default";
+@import "theme/theme-jeecg";
 @import "theme/theme-default-light";
 @import "theme/theme-vue-admin";
 @import "theme/theme-v2board";
