--- a/src/packages/xxWeb-box/assets/css/theme/theme-jeecg.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-jeecg.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='default']{
+.xxWeb-box[theme='jeecg']{
   @--main-bg-color: #001529;
   @--text-color: #fff;
   @--active-color:#409EFF;
@@ -112,7 +112,7 @@
     background-color: @--main-bg-color;
   }
 }
-.xxWeb-box-default{
+.xxWeb-box-jeecg{
   @--main-bg-color: #304156;
   @--menu-item-text-color:#bfcbd9;
   @--active-color:#409EFF;
