--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -15,7 +15,7 @@
   @--logo-bg-color:#fff;
   @--header-shadow-color:#F6F8FA;
   @--topMenu-header-color:#fff;
-  @--topMenu-header-bg-color:#F5F7F9;
+  @--topMenu-header-bg-color: #ffffff;
   @--topMenu-shadow-color:rgba(0,21,41,0.08);
   @--contextmenu-bg-color:#eee;
   @--footer-bg-color:#fff;
@@ -56,8 +56,11 @@
     color: @--topMenu-header-color;
     background: @--topMenu-header-bg-color;
     .user-wrapper{
+      padding: 8px;
+      background-color: @--menu-item-hover-bg-color;
+      border-radius: 16px;
       .el-dropdown{
-        color: @--text-color;
+        color: @--user-wrapper-color;
       }
     }
     .el-breadcrumb__inner{
@@ -109,6 +112,7 @@
     .el-submenu.is-active{
       .el-submenu__title{
         border-radius: 10px;
+        border-bottom: 0 solid #fff;
         color:@--menu-item-active-text-color;
         background-color: @--menu-item-active-bg-color;
       }
@@ -205,11 +209,11 @@
     }
   }
 }
-.xxWeb-box-nitro{
-  @--main-bg-color: #304156;
+.xxWeb-xxWebBox-nitro{
+  @--main-bg-color: #fff;
   @--menu-item-text-color:#bfcbd9;
   @--active-color:#409EFF;
-  @--menu-item-hover-bg-color:#EFF7FE;
+  @--menu-item-hover-bg-color:#F8FAFB;
   .el-menu--popup{
     background-color: @--main-bg-color;
   }
@@ -222,7 +226,7 @@
       color: @--active-color;
     }
     .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-      color: @--menu-item-text-color;
+      color: @--active-color;
       background-color: @--menu-item-hover-bg-color;
     }
   }
