--- a/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/jeecg-login.less
@@ -31,7 +31,7 @@ html,body{
     }
 
     .container {
-      width: 500px;
+      min-width: 500px;
       position: absolute;
       top: 20%;
       height: auto;
