--- a/src/packages/xxWeb-box/assets/css/404/404.less
+++ b/src/packages/xxWeb-box/assets/css/404/404.less
@@ -10,6 +10,7 @@ html,body{
   margin:0;
   padding:0;
   .not-found{
+    position: relative;
     width: 100%;
     height: 100%;
     margin:0;
@@ -17,6 +18,9 @@ html,body{
     background: linear-gradient(#229EF8,50%, #A8C4F3);
     font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     text-align: center;
+    .not-found-content {
+      //position: absolute;
+    }
     .code{
       display: inline-block;
       font-size: 160px;
@@ -42,12 +46,12 @@ html,body{
       background-size: contain;
     }
     .home-button{
-      position: absolute;
+      //position: absolute;
       bottom: 200px;
       width: 120px;
       height: 40px;
-      left: 50%;
-      right: 50%;
+      //left: 50%;
+      //right: 50%;
       line-height: 40px;
       text-align: center;
       margin-left: -60px;
