--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -76,9 +76,6 @@
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
   }
-  .side-scrollbar{
-    background: @--main-bg-color
-  }
   .side-menu{
     background: @--main-bg-color;
     .side-menu-header-center{
@@ -120,6 +117,12 @@
     .el-menu-item.is-active{
       color: @--active-color;
       background-color: @--menu-sub-item-active-bg-color;
+    }
+  }
+  .side-scrollbar{
+    background: @--main-bg-color;
+    .dynamic-menu.is-Collapse{
+      margin: 0;
     }
   }
   .title{
