--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -51,6 +51,14 @@
         color: @--user-wrapper-color;
       }
     }
+    .el-breadcrumb__inner{
+      a {
+        color: @--user-wrapper-color;
+      }
+      :hover {
+        color: @--menu-text-hover-color;
+      }
+    }
   }
   .top-header{
     color: @--topMenu-header-color;
@@ -66,6 +74,9 @@
     .el-breadcrumb__inner{
       a{
         color: @--text-color;
+      }
+      .is-link {
+        color: @--user-wrapper-color;
       }
     }
     .logo{
