--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,5 +1,5 @@
-@import "theme/theme-jeecg";
 @import "theme/theme-element";
+@import "theme/theme-jeecg";
 @import "theme/theme-vue-admin";
 @import "theme/theme-v2board";
 @import "theme/theme-thunder";
@@ -88,6 +88,8 @@ html,body{
         align-items: center;
         padding: 0 15px;
         transition: all;
+        z-index: 2;
+        position: relative;
       }
       .side-menu-header-center{
         justify-content: center;
