--- a/src/packages/xxWeb-box/assets/css/theme/theme-element.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-element.less
@@ -97,6 +97,7 @@
   .side-scrollbar{
     background: @--main-bg-color;
     .side-menu-header {
+      box-shadow: 0 0px 4px #00000033 !important;
       background: @--topMenu-header-bg-color;
       .title{
         color: @--topMenu-header-color;
@@ -107,6 +108,7 @@
     background: @--main-bg-color;
   }
   .dynamic-menu{
+    border-top: 1px solid #eee;
     .el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
