--- a/src/packages/xxWeb-box/assets/css/theme/theme-element.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-element.less
@@ -97,7 +97,7 @@
   .side-scrollbar{
     background: @--main-bg-color;
     .side-menu-header {
-      box-shadow: 0 0px 4px #00000033 !important;
+      box-shadow: 0 0px 4px #00000033;
       background: @--topMenu-header-bg-color;
       .title{
         color: @--topMenu-header-color;
