--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -93,6 +93,16 @@
       justify-content: flex-start !important;
     }
   }
+  .side-scrollbar{
+    background: @--main-bg-color;
+    .side-menu-header {
+      box-shadow:none;
+      background:transparent;
+      .title{
+        color: @--text-color;
+      }
+    }
+  }
   .dynamic-menu{
     margin: 0 10px;
     .el-menu {
